--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "run-sequence": "^2.2.1"
   },
   "dependencies": {
     "express": "^4.16.2"
