importing webmidi module as part of js bundle

--- a/ubiquitel-midi-app/package.json
+++ b/ubiquitel-midi-app/package.json
@@ -27,6 +27,7 @@
     "angular-bootstrap-md": "^5.2.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "webmidi": "^2.0.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
