--- a/Parent/package.json
+++ b/Parent/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "express": "^4.16.4",
     "history": "^4.7.2",
-    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
@@ -16,9 +15,9 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "wavesurfer.js": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
