--- a/Parent/package.json
+++ b/Parent/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "express": "^4.16.4",
     "history": "^4.7.2",
     "node-sass": "^4.10.0",
